# triangles-legacy

./: README.md  justfile  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
src/: TestTriangle.py  Triangle.py
tests/: test_TestTriangle.py  test_example.py
