[tool.poetry]
name = "template-567"
version = "0.1.0"
description = ""
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.97.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src"]
